--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <textarea type="text" class="board-input"></textarea>
+  <textarea type="text" class="board-input" autofocus="autofocus"></textarea>
   <div class="board"></div>
   <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="keyboard.js"></script>
